force-app/main/default/objects/NI_Integration_Log__c/NI_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>NI Integration Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NI Integration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NI Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>