force-app/main/default/objects/NI_Integration_Log__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <description>NICC-023347
The 18 character Salesforce Id of the attachment record related to this integration message. This field is updated when attachments are sent as part of the integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The 18 character Salesforce Id of the attachment record related to this integration message. This field is updated when attachments are sent as part of the integration.</inlineHelpText>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>