force-app/main/default/objects/NI_Integration_Log__c/fields/Attachment_Link__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Link__c</fullName>
    <description>NICC-023347
The URL to the attachment record related to this integration message. This field is updated when attachments are sent as part of the integration.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Attachment_Id__c, 
Attachment_Name__c)</formula>
    <inlineHelpText>The URL to the attachment record related to this integration message. This field is updated when attachments are sent as part of the integration.</inlineHelpText>
    <label>Attachment Link</label>
    <type>Text</type>
</CustomField>