force-app/main/default/objects/NI_Integration_Log__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <description>NICC-023347
The name of the attachment record related to this integration message. This field is updated when attachments are sent as part of the integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the attachment record related to this integration message. This field is updated when attachments are sent as part of the integration.</inlineHelpText>
    <label>Attachment Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>