force-app/main/default/objects/NI_Integration_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Case object from NI Integration Logs</description>
    <inlineHelpText>Lookup to Case object from NI Integration Logs</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>NI Integration Logs</relationshipLabel>
    <relationshipName>NI_Integration_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>