force-app/main/default/objects/NI_Integration_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Captures the details of the response from the web services call.

NICC-030216 - Relabeled from XML Response to Response
NICC-032393</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detailed response from the web services call.</inlineHelpText>
    <label>Response</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>