force-app/main/default/objects/NI_Integration_Log__c/fields/Do_Retries__c.field-meta.xml
<CustomField>
    <fullName>Do_Retries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to determine to resend the failed messages to server.</description>
    <inlineHelpText>This is used to determine to resend the failed messages to server.</inlineHelpText>
    <label>Do Retries</label>
    <type>Checkbox</type>
</CustomField>