force-app/main/default/objects/NI_Integration_Log__c/fields/File_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>