force-app/main/default/objects/NI_Integration_Log__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; File_Id__c, File_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Link</label>
    <type>Text</type>
</CustomField>