force-app/main/default/objects/NI_Integration_Log__c/fields/Integration_Account__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account__c</fullName>
    <description>NICC-032393</description>
    <formula>Case__r.Integration_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integration Account</label>
    <type>Text</type>
</CustomField>