force-app/main/default/objects/NI_Integration_Log__c/fields/Integration_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Integration_Case_Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-030216 - Lookup to Integration Case Comments for retry attempts and logging purpose
NICC-032393</description>
    <inlineHelpText>Lookup to Integration Case Comments for retry attempts and logging purpose</inlineHelpText>
    <label>Integration Case Comment</label>
    <referenceTo>INTGR_Case_Comment__c</referenceTo>
    <relationshipLabel>NI Integration Logs</relationshipLabel>
    <relationshipName>NI_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>