force-app/main/default/objects/NI_Integration_Log__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <description>Integration log records populated with integration name.</description>
    <label>Integration Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Win@proach</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>