force-app/main/default/objects/NI_Integration_Log__c/fields/isRetry__c.field-meta.xml
<CustomField>
    <fullName>isRetry__c</fullName>
    <description>NICC-030216 - Denotes when a retry attempt has been made
NICC-032393</description>
    <formula>IF ( 
    OR (
        Retries_Performed__c &lt; Integration_Case__r.INTGR_Account__r.Max_Count_To_Resend_Failed_Message__c, 
        Retries_Performed__c = 0
    ), 
    TRUE, 
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRetry</label>
    <type>Checkbox</type>
</CustomField>