force-app/main/default/objects/NI_Integration_Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <description>DateTime field that captures the date and time of the transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>