force-app/main/default/objects/NI_Integration_Log__c/fields/Resend_Failed_Message_Interval_in_Min__c.field-meta.xml
<CustomField>
    <fullName>Resend_Failed_Message_Interval_in_Min__c</fullName>
    <description>NICC-030216 - Formula to display what is value is set to currently on the related Integration Account record.
NICC-032393</description>
    <formula>Integration_Case__r.INTGR_Account__r.Resend_Failed_Message_Interval_in_Min__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to display what is value is set to currently on the related Integration Account record.</inlineHelpText>
    <label>Resend Failed Message Interval (in Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>