force-app/main/default/objects/NI_Integration_Log__c/fields/Retries_Performed__c.field-meta.xml
<CustomField>
    <fullName>Retries_Performed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of retries performed for re sending failed message.</description>
    <inlineHelpText>Total number of retries performed for re sending failed message.</inlineHelpText>
    <label>Retries Performed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>