force-app/main/default/objects/NI_Integration_Log__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>NI Integration Logs</relationshipLabel>
    <relationshipName>NI_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>