force-app/main/default/objects/NI_Integration_Log__c/fields/UpdateFor__c.field-meta.xml
<CustomField>
    <fullName>UpdateFor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UpdateFor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>