force-app/main/default/objects/NI_Integration_Log__c/fields/Web_Service_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Web_Service_Endpoint__c</fullName>
    <description>Web Service URL Endpoint for the particular log record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Service Endpoint</label>
    <type>Url</type>
</CustomField>