force-app/main/default/objects/NI_Integration_Log__c/fields/XMLRequest__c.field-meta.xml
<CustomField>
    <fullName>XMLRequest__c</fullName>
    <description>Win@proach/Service Now request for log purpose, it may contain xml or json request for create/update fields, attachments etc.
NICC-030216 - Relabeled from XMLRequest to Request
NICC-032393</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Win@proach/Service Now request for log purpose, it may contain xml or json request for create/update fields, attachments etc.</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>