force-app/main/default/objects/NI_Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UpdateFor__c</columns>
    <columns>Case__c</columns>
    <columns>Transaction_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Retries_Performed__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>