force-app/main/default/objects/NI_Integration_Log__c/listViews/NI_BatchWinaproachResend_Query_Stu_s.listView-meta.xml
<ListView>
    <fullName>NI_BatchWinaproachResend_Query_Stu_s</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Case__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Integration_Name__c</columns>
    <columns>UpdateFor__c</columns>
    <columns>Retries_Performed__c</columns>
    <columns>Do_Retries__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>Integration_Name__c</field>
        <operation>equals</operation>
        <value>Win@proach</value>
    </filters>
    <filters>
        <field>Do_Retries__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Retries_Performed__c</field>
        <operation>lessThan</operation>
        <value>10</value>
    </filters>
    <label>NI_BatchWinaproachResend Query Stu&apos;s</label>
    <sharedTo>
        <group>Administrators</group>
        <group>CRS_Global_Escalation_Support</group>
    </sharedTo>
</ListView>